# password-strength-checker

./: .gitignore  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/docs/: index.html
.github/docs/docs/: app.js
.github/workflows/: ci.yml
api/: main.py
docs/: app.js  index.html
src/passcheck/: __init__.py  __main__.py  checks.py  entropy.py  feedback.py  score.py
src/passcheck/data/: common_weak_passwords.txt
tests/: test_basic.py
web/: app.js
